<resources>
    <string name="app_name">TeMendaki</string>
    <string name="welcome_to_temendaki">Selamat Datang di TeMendaki</string>
    <string name="climbing_greetings">Yuk kita mendaki gunung bersama!</string>
    <string name="login">Masuk</string>
    <string name="signup">Daftar</string>
    <string name="copyright">© 2023 Bangkit Academy Capstone Project</string>
    <string name="input_email">Masukkan Email</string>
    <string name="create_your_account">Buat Akun Anda</string>
    <string name="complete_your_information">Mohon lengkapi informasi Anda di bawah ini!</string>
    <string name="input_full_name">Masukkan Nama Lengkap</string>
    <string name="input_province">Masukkan Provinsi</string>
    <string name="province">Provinsi</string>
    <string name="climbing_experience_levels">Tingkatan Pengalaman Mendaki</string>
    <string name="input_password">Masukkan Kata Sandi</string>
    <string name="input_climbing_experience_levels">Masukkan Tingkatan Pengalaman Mendaki</string>
    <string name="input_confirm_password">Konfirmasi Kata Sandi</string>
    <string name="next">Selanjutnya</string>
    <string name="ensure_password">Pastikan data yang kamu isikan benar ya!</string>
    <string name="profile_name">Mochammad Adhi Buchori</string>
    <string name="history">Histori Pemesanan</string>
    <string name="wishlist">Daftar Keinginan</string>
    <string name="inbox">Kotak Masuk</string>

    <string-array name="provinces">
        <item>Aceh</item>
        <item>Sumatera Utara</item>
        <item>Sumatera Barat</item>
        <item>Riau</item>
        <item>Jambi</item>
        <item>Sumatera Selatan</item>
        <item>Bengkulu</item>
        <item>Lampung</item>
        <item>Kepulauan Bangka Belitung</item>
        <item>Kepulauan Riau</item>
        <item>DKI Jakarta</item>
        <item>Jawa Barat</item>
        <item>Jawa Tengah</item>
        <item>DI Yogyakarta</item>
        <item>Jawa Timur</item>
        <item>Banten</item>
        <item>Bali</item>
        <item>Nusa Tenggara Barat</item>
        <item>Nusa Tenggara Timur</item>
        <item>Kalimantan Barat</item>
        <item>Kalimantan Tengah</item>
        <item>Kalimantan Selatan</item>
        <item>Kalimantan Timur</item>
        <item>Kalimantan Utara</item>
        <item>Sulawesi Utara</item>
        <item>Sulawesi Tengah</item>
        <item>Sulawesi Selatan</item>
        <item>Sulawesi Tenggara</item>
        <item>Gorontalo</item>
        <item>Sulawesi Barat</item>
        <item>Maluku</item>
        <item>Maluku Utara</item>
        <item>Papua Barat</item>
        <item>Papua</item>
    </string-array>

    <string-array name="climbing_levels">
        <item>Pemula</item>
        <item>Menengah</item>
        <item>Mahir</item>
    </string-array>

    <string name="trip_name">Trip Name</string>
    <string name="rupiah_currency">IDR</string>
    <string name="trip_nominal">700000</string>
    <string name="trip_day">5D</string>
    <string name="trip_rating">5.0</string>
    <string name="sold">Terjual</string>
    <string name="sold_quantity">500</string>
    <string name="hiking_guide">Panduan Lengkap Mendaki Gunung</string>
    <string name="for_beginners">Untuk Pemula</string>
    <string name="my_location">Location Testing</string>
    <string name="search_description">Cari di TeMendaki</string>
    <string name="awaiting_payment">Menunggu Pembayaran</string>
    <string name="trip_date">Trip Date</string>
    <string name="trip_status">Trip Status</string>
    <string name="trip_period">Trip Period</string>
    <string name="trip_person">%d Orang</string>
    <string name="trip_time">Trip Time</string>
    <string name="total_payment">Total Pembayaran</string>
    <string name="trip_price">1400998</string>
    <string name="transfer_manual">Transfer Manual</string>
    <string name="sender_account">Rekening Pengirim</string>
    <string name="trip_sender_account_number">08123456789</string>
    <string name="trip_sender_account_name">a.n. %s</string>
    <string name="destination_account">Rekening Tujuan</string>
    <string name="trip_destination_account_number">08123456789</string>
    <string name="trip_destination_account_name">a.n. PT. TeMendaki</string>
    <string name="see_how_to_pay">Lihat Cara Bayar</string>
    <string name="account_number">Nomor Rekening</string>
    <string name="copy">Salin</string>
    <string name="countdown_awaiting_payment">Menunggu Pembayaran 00:30:00</string>
    <string name="payment_important_information">Penting!</string>
    <string name="how_to_pay">Cara Pembayaran</string>

    <string name="payment_important_information_list">
        <br>• Transfer dengan jumlah yang tepat hingga 3 digit terakhir.\n</br>
        <br>• Demi keamanan transaksi, <b>jangan berikan bukti transfer</b> pada siapapun.</br>
    </string>

    <string name="how_to_pay_list">
        <br>1. Lakukan pembayaran melalui ATM / mobile bangking / internet banking / SMS banking / kantor bank terdkekat \n</br>
        <br>2. Isi nomor rekening tujuan sesuai yang ada di halaman Menunggu Pembayaran  (a.n. PT. TeMendaki).\n</br>
        <br>3. Masukan nominal pembayaran sesuai dengan jumlah tagihanmu, termasuk 3 digit terakhir.\n</br>
        <br>4. Pembayaran akan diverifikasi oleh Tokopedia. Waktu Verifikasi paling lambat 1 x 24 jam untuk sesama bank dan 2 x 24 jam di hari kerja jika antar bank yang berbeda.</br>
    </string>

    <string name="check_availability">Cek Ketersediaan</string>
    <string name="trip_description">Trip Description</string>
    <string name="trip_location">Trip Location</string>
    <string name="tab_detail_trip_information">Tab Detail Trip Information</string>

    <string name="hello_meeting_point_fragment">This is <b>Meeting Point Fragment</b></string>
    <string name="hello_facilities_fragment">This is <b>Facilities Fragment</b></string>
    <string name="hello_rating_fragment">This is <b>Rating Fragment</b></string>
    <string name="hello_timeline_fragment">This is <b>Timeline Fragment</b></string>
    <string name="trip_quantity">1</string>
    <string name="choose_climbing_date">Pilih Tanggal Pendakian</string>
    <string name="availability">Ketersediaan</string>
    <string name="remnant">Sisa</string>
    <string name="trip_remnant_availability">1</string>
    <string name="from_the_number_of_climbers">dari 50 Pendaki</string>
    <string name="booker_data">Data Pemesan</string>
    <string name="climbers_data">Data Pendaki</string>
    <string name="followed_this_hike">Saya mengikuti pendakian ini</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="bank_transfer_payment_method">Bank BCA</string>
    <string name="total_pay">Total Bayar</string>
    <string name="pay">Bayar</string>
    <string name="payment_confirmation">Konfirmasi Pembayaran</string>
    <string name="bank_transfer_method">Transfer Bank (Verifikasi Manual)</string>
    <string name="okay">Okay</string>
    <string name="congratulations">Selamat</string>
    <string name="successfully_processed">Pesanan kamu berhasil diproses</string>
    <string name="register_invalid">Invalid Email or Password</string>
    <string name="profile_email">adhi.buchori@gmail.com</string>
    <string name="logout">Keluar</string>
    <string name="profile">Profile</string>
    <string name="login_wrong">Gagal Masuk</string>
    <string name="login_success">Berhasil Masuk</string>
    <string name="logout_error">Gagal Keluar</string>

    <string name="location_error">Kesalahan Lokasi</string>
    <string name="location_permission_error">Kesalahan Izin Lokasi</string>
    <string name="allow_permission">Harap Izinkan Izin</string>

    <string-array name="climbing_dates">
        <item>20 – 29 Juni 2023</item>
        <item>10 – 19 Juli 2023</item>
        <item>20 – 29 Juli 2023</item>
    </string-array>

</resources>